--- a/src/app/modules/DataUploadDownload/studentdatadump/studentdatadump.component.html
+++ b/src/app/modules/DataUploadDownload/studentdatadump/studentdatadump.component.html
@@ -34,10 +34,10 @@
     <div id="printsection">
         <mat-table #table [dataSource]="dataSource" style="overflow: auto;">
             <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
-                <mat-header-cell *matHeaderCellDef>
+                <mat-header-cell *matHeaderCellDef style="width:140px; overflow-wrap: break-word;word-wrap: break-word;">
                     {{disCol}}
                 </mat-header-cell>
-                <mat-cell *matCellDef="let element">
+                <mat-cell *matCellDef="let element" style="word-wrap: break-word;">
                     {{element[disCol]}}
                 </mat-cell>
             </ng-container>
@@ -45,7 +45,7 @@
             <mat-row *matRowDef="let row; columns: displayedColumns;" style="min-height: 40px;"></mat-row>
         </mat-table>
     </div>
-    <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,50]"></mat-paginator>
+    <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[5,10,25,50]"></mat-paginator>
     <div *ngIf="ELEMENT_DATA.length>0">
         <button (click)="exportArray()" mat-raised-button color="accent">
             <mat-icon>download</mat-icon>
