--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Ewert&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Smooch&display=swap');
+
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
 @import '~@angular/material/theming';
