--- a/src/app/modules/attendance/studentattendance/studentattendance.component.html
+++ b/src/app/modules/attendance/studentattendance/studentattendance.component.html
@@ -19,7 +19,7 @@
                 </mat-select>
             </mat-form-field>
             <mat-form-field appearance="outline" [style.width.px]="130">
-                <mat-label>Attendance Date</mat-label>
+                <mat-label>Date</mat-label>
                 <input formControlName="searchAttendanceDate" matInput [matDatepicker]="AttendanceDate"
                     autocomplete="off">
                 <mat-datepicker-toggle matSuffix [for]="AttendanceDate"></mat-datepicker-toggle>
