--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -10,7 +10,7 @@
                     src="../../assets/images/closeup-business-woman-hand-typing-laptop-keyboard-with-m.jpg" />
          </div> -->
             <div>
-                <mat-icon>directions_alt</mat-icon>
+                <!-- <mat-icon>directions_alt</mat-icon> -->
                 <b>Enquiries and Admissions Management</b><br>
                 With the help of the Education Management System, the most commonly asked questions and enquiries
                 regarding
@@ -24,7 +24,7 @@
                     src="../../assets/images/businesspeople-meeting-plan-analysis-graph-company-finance-strat.jpg" />
             </div> -->
             <div>
-             <mat-icon>assignment_return</mat-icon>
+             <!-- <mat-icon>assignment_return</mat-icon> -->
                 <b>Management of Fee Collections</b><br>
                 Fee collection can be made easy with the help of the Educational Management System, as it
                 calculates and displays fee amount, due and payment details.
@@ -32,6 +32,7 @@
         </div>
         <div style="margin-bottom: 30px;">
             <div>
+                
                 <b>Examination Management</b><br>
                 An Education Management System can be useful for planning, scheduling, and informing important
                 information about exams by using scheduling. It can also be used to publish exam
