--- a/src/app/modules/Accounting/profitandloss/profitandloss.component.html
+++ b/src/app/modules/Accounting/profitandloss/profitandloss.component.html
@@ -32,7 +32,7 @@
     </button>
 </form>
 <div style="display:flex;width:100%;flex-direction: column;">
-    <div style="margin-bottom: 15px;display: flex;flex-direction: column;">
+    <!-- <div style="margin-bottom: 15px;display: flex;flex-direction: column;">
         <div style="font-weight: bold;">Trial Balance</div>
         <mat-table [dataSource]="TrialBalanceDatasource" matSort>
             <ng-container matColumnDef="AccountName">
@@ -65,15 +65,15 @@
                 </mat-footer-cell>
             </ng-container>
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row style="min-height: 39px;" *matRowDef="let row; columns: displayedColumns;"
+            <mat-row style="min-height: 35px;" *matRowDef="let row; columns: displayedColumns;"
                 class="element-row"></mat-row>
-            <mat-footer-row class="sticky-footer" *matFooterRowDef="displayedColumns">
+            <mat-footer-row style="min-height: 35px;" class="sticky-footer" *matFooterRowDef="displayedColumns">
             </mat-footer-row>
         </mat-table>
-    </div>
+    </div> -->
     <div style="display:flex;width:100%">
-        <div style="display:flex;flex-direction: column;border:1px solid lightgray">
-            <div style="margin:15px;font-weight: bold;">Income</div>
+        <div style="display:flex;flex-direction: column;width:100%;">
+            <!-- <div style="margin:15px;font-weight: bold;">Income</div> -->
             <mat-table [dataSource]="RevenueDataSource" matSort>
                 <ng-container matColumnDef="AccountName">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Account
@@ -82,6 +82,7 @@
                         {{element.AccountName}}
                     </mat-cell>
                     <mat-footer-cell *matFooterCellDef>
+                       <b>Total</b>
                     </mat-footer-cell>
                 </ng-container>
                 <ng-container matColumnDef="Balance">
@@ -94,14 +95,19 @@
                         {{TotalIncome}}
                     </mat-footer-cell>
                 </ng-container>
+                <ng-container matColumnDef="Income">
+                    <mat-header-cell *matHeaderCellDef [attr.colspan]="2" style="display:flex;justify-content: flex-start;font-weight: bold;">Income
+                    </mat-header-cell>
+                </ng-container>
+                <mat-header-row *matHeaderRowDef="['Income']"></mat-header-row>
                 <mat-header-row *matHeaderRowDef="IncomeStatementColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: IncomeStatementColumns;" class="element-row"></mat-row>
-                <mat-footer-row class="sticky-footer" *matFooterRowDef="IncomeStatementColumns">
+                <mat-row style="min-height: 35px;" *matRowDef="let row; columns: IncomeStatementColumns;" class="element-row"></mat-row>
+                <mat-footer-row style="min-height: 35px;" class="sticky-footer" *matFooterRowDef="IncomeStatementColumns">
                 </mat-footer-row>
             </mat-table>
         </div>
-        <div style="display:flex;flex-direction: column;;border:1px solid lightgray">
-            <div style="margin:15px;font-weight: bold;">Expense</div>
+        <div style="display:flex;flex-direction: column;width:100%;">
+            <!-- <div style="margin:15px;font-weight: bold;">Expense</div> -->
             <mat-table [dataSource]="ExpenseDataSource" matSort>
                 <ng-container matColumnDef="AccountName">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Account
@@ -110,6 +116,7 @@
                         {{element.AccountName}}
                     </mat-cell>
                     <mat-footer-cell *matFooterCellDef>
+                        <b>Total</b>
                     </mat-footer-cell>
                 </ng-container>
                 <ng-container matColumnDef="Balance">
@@ -122,9 +129,14 @@
                         {{TotalExpense}}
                     </mat-footer-cell>
                 </ng-container>
+                <ng-container matColumnDef="Expense">
+                    <mat-header-cell *matHeaderCellDef [attr.colspan]="2" style="display:flex;justify-content: flex-start;font-weight: bold;">Expense
+                    </mat-header-cell>
+                </ng-container>
+                <mat-header-row *matHeaderRowDef="['Expense']"></mat-header-row>
                 <mat-header-row *matHeaderRowDef="IncomeStatementColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: IncomeStatementColumns;" class="element-row"></mat-row>
-                <mat-footer-row class="sticky-footer" *matFooterRowDef="IncomeStatementColumns">
+                <mat-row style="min-height: 35px;" *matRowDef="let row; columns: IncomeStatementColumns;" class="element-row"></mat-row>
+                <mat-footer-row style="min-height: 35px;" class="sticky-footer" *matFooterRowDef="IncomeStatementColumns">
                 </mat-footer-row>
             </mat-table>
         </div>
